// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`public api 1`] = `
Array [
  "$stringIsAlpha",
  "$stringIsAlphanumeric",
  "$stringIsAscii",
  "$stringIsBase32",
  "$stringIsBase58",
  "$stringIsBase64",
  "$stringIsBIC",
  "$stringIsCreditCard",
  "$stringIsDataURI",
  "$stringIsEmail",
  "$stringIsFQDN",
  "$stringIsHash",
  "$stringIsHexadecimal",
  "$stringIsIBAN",
  "$stringIsIMEI",
  "$stringIsIP",
  "$stringIsISBN",
  "$stringIsISIN",
  "$stringIsISO31661Alpha2",
  "$stringIsISO31661Alpha3",
  "$stringIsISRC",
  "$stringIsISSN",
  "$stringIsJWT",
  "$stringIsLowercase",
  "$stringIsMACAddress",
  "$stringIsMagnetURI",
  "$stringIsMimeType",
  "$stringIsNumeric",
  "$stringIsUppercase",
  "$stringIsStrongPassword",
  "$stringIsURL",
  "$stringIsUUID",
  "STRING_IS_EXPRESSIONS",
]
`;

exports[`public api 2`] = `
Array [
  "$stringIsAlpha",
  "$stringIsAlphanumeric",
  "$stringIsAscii",
  "$stringIsBase32",
  "$stringIsBase58",
  "$stringIsBase64",
  "$stringIsBIC",
  "$stringIsCreditCard",
  "$stringIsDataURI",
  "$stringIsEmail",
  "$stringIsFQDN",
  "$stringIsHash",
  "$stringIsHexadecimal",
  "$stringIsIBAN",
  "$stringIsIMEI",
  "$stringIsIP",
  "$stringIsISBN",
  "$stringIsISIN",
  "$stringIsISO31661Alpha2",
  "$stringIsISO31661Alpha3",
  "$stringIsISRC",
  "$stringIsISSN",
  "$stringIsJWT",
  "$stringIsLowercase",
  "$stringIsMACAddress",
  "$stringIsMagnetURI",
  "$stringIsMimeType",
  "$stringIsNumeric",
  "$stringIsUppercase",
  "$stringIsStrongPassword",
  "$stringIsURL",
  "$stringIsUUID",
]
`;
